--- a/View/NodeSearchBox.xaml
+++ b/View/NodeSearchBox.xaml
@@ -1,11 +1,12 @@
 ﻿<UserControl x:Class="MultiBranchTexter.View.NodeSearchBox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Height="48" Width="160">
+             Height="54" Width="160">
     <Grid Background="{DynamicResource ThemeBrush}">
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition Height="6"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -23,5 +24,6 @@
         <Button x:Name="nextBtn" Grid.Row="1" Grid.Column="1" Margin="2" 
                 Template="{DynamicResource searchBoxBtnTemp}"
                 Click="NextBtn_Click"/>
+        <Rectangle Grid.Row="2" Grid.ColumnSpan="2" Fill="{DynamicResource BaseBrush}"/>
     </Grid>
 </UserControl>
