--- a/View/Window/MainWindow.xaml
+++ b/View/Window/MainWindow.xaml
@@ -92,6 +92,8 @@
                               IsEnabled="{Binding IsWorkGridVisible}"/>
                     <MenuItem Header="导出为latex"
                               IsEnabled="{Binding IsWorkGridVisible}"/>
+                    <MenuItem Header="导出节点图.png" Command="{Binding OutputFCCCommand}"
+                              IsEnabled="{Binding IsWorkGridVisible}"/>
                 </MenuItem>
             </Menu>
             <CheckBox Width="28"
