--- a/View/Panel/FlowChartContainer.xaml
+++ b/View/Panel/FlowChartContainer.xaml
@@ -66,6 +66,19 @@
                 </ContextMenu>
             </ScrollViewer.ContextMenu>
         </ScrollViewer>
+        <Border Background="Transparent" BorderThickness="1" IsHitTestVisible="False"
+                IsEnabled="{Binding IsFocused, ElementName=scrollViewer}">
+            <Border.Style>
+                <Style TargetType="{x:Type Border}">
+                    <Setter Property="BorderBrush" Value="Transparent"/>
+                    <Style.Triggers>
+                        <Trigger Property="IsEnabled" Value="True">
+                            <Setter Property="BorderBrush" Value="{DynamicResource ThemeBrush}"/>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </Border.Style>
+        </Border>
         <!--搜索框-->
         <v:NodeSearchBox x:Name="searchBox" Visibility="{Binding SearchBoxVisibility, Mode=TwoWay}"
                          VerticalAlignment="Top" HorizontalAlignment="Right"/>
@@ -76,7 +89,7 @@
                       VerticalAlignment="Top" HorizontalAlignment="Left"
                       IsHitTestVisible="False" Visibility="Hidden"/>
         <!--下方信息栏-->
-          <StackPanel Orientation="Horizontal" Grid.Row="1" 
+        <StackPanel Orientation="Horizontal" Grid.Row="1" 
                     VerticalAlignment="Stretch" HorizontalAlignment="Right">
             <Button Content="重新排列" Template="{StaticResource textButtonTemplate}"
                     Command="{Binding ReArrangeCommand}"/>
