--- a/View/Window/MainWindow.xaml
+++ b/View/Window/MainWindow.xaml
@@ -25,95 +25,9 @@
     
     <Grid Background="{DynamicResource BaseBrush}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="28"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left"
-                    Grid.Row="0">
-            <Button ToolTip="新建" Width="28"
-                    Template="{StaticResource generalButtonTemplate}"
-                    Command="{Binding NewFileCommand}"
-                    Content="M0,9 L6,9 M3,6 3,12
-                    M2,5 2,0 9,0 12,3 12,14 2,14 L2,13
-                    M9,0 9,3 L12,3"/>
-            <Button ToolTip="打开" Width="28"
-                    Template="{StaticResource generalButtonTemplate}"
-                    Command="{Binding OpenFileCommand}"
-                    Content="M1,12 13,12 16,6 4,6 Z
-                    M1,12 0,12 0,4 2,2 6,2 8,4 13,4 L13,6"/>
-            <Button ToolTip="保存" Width="28"
-                    Template="{StaticResource generalButtonTemplate}"
-                    Command="{Binding SaveFileCommand}"
-                    Content="M0,14 0,0 3,0 3,5 8,5 8,0 9,0 12,3 12,14 Z
-                    M4,0 6,0 L6,4"/>
-            <Button ToolTip="另存为" Width="28"
-                    Template="{StaticResource generalButtonTemplate}"
-                    Command="{Binding SaveAsFileCommand}"
-                    Content="M0,5 0,0 3,0 3,5 8,5 8,0 9,0 12,3 12,14 L8,14 
-                    M4,14 0,14 L0,13
-                    M4,0 6,0 L6,4 M0,10 L8,10 M5,7 8,10 L5,13"/>
-            <Separator Width="1" Margin="4" Background="{DynamicResource ThemeBrush}" Opacity="0.5"
-                       Style="{DynamicResource {x:Static ToolBar.SeparatorStyleKey}}" />
-            <Button ToolTip="字体缩小" Width="28"
-                    Command="{Binding FontSizeDownCommand}"
-                    Template="{StaticResource generalButtonTemplate}"
-                    Content="M0,16 5,4 L10,16 M2,11 L8,11
-                    M12,16 14,11.2 16,16
-                    M10,4 16,4"/>
-            <TextBlock Text="{Binding TextFontSize}" Width="14" VerticalAlignment="Center"
-                       TextAlignment="Center" Foreground="{DynamicResource Foreground.BaseBrush}"/>
-            <Button ToolTip="字体放大" Width="28"
-                    Command="{Binding FontSizeUpCommand}"
-                    Template="{StaticResource generalButtonTemplate}"
-                    Content="M6,16 11,4 L16,16 M8,11 L14,11
-                      M0,16 2,11.2 4,16
-                      M0,4 6,4 M3,1 3,7"/>
-            <Separator Width="1" Margin="4" Background="{DynamicResource ThemeBrush}" Opacity="0.5"
-                       Style="{DynamicResource {x:Static ToolBar.SeparatorStyleKey}}" />
-            <Border Margin="6,1,6,1" BorderThickness="1,0,0,1" 
-                    MinWidth="400" BorderBrush="{DynamicResource ThemeBrush}">
-                <v:HintTextBlock Width="Auto" Margin="8,0,0,0"
-                                 IsAwake="{Binding IsHintAwake}"
-                                 InText="{Binding InText}"
-                                 OutText="{Binding OutText}"/>
-            </Border>
-            <Separator Width="1" Margin="4" Background="{DynamicResource ThemeBrush}" Opacity="0.5"
-                       Style="{DynamicResource {x:Static ToolBar.SeparatorStyleKey}}" />
-            <Menu Background="Transparent" Height="28">
-                <MenuItem Header="M0,0 6,6 L0,12 M8,0 14,6 L8,12"
-                          ToolTip="导出">
-                    <MenuItem Header="导出为json" Command="{Binding OutputAsJSONCommand}"
-                              IsEnabled="{Binding IsWorkGridVisible}"/>
-                    <MenuItem Header="导出为txt" Command="{Binding OutputAsTxtCommand}"
-                              IsEnabled="{Binding IsWorkGridVisible}"/>
-                    <MenuItem Header="导出为docx"
-                              IsEnabled="{Binding IsWorkGridVisible}"/>
-                    <MenuItem Header="导出为latex"
-                              IsEnabled="{Binding IsWorkGridVisible}"/>
-                    <MenuItem Header="导出节点图.png" Command="{Binding OutputFCCCommand}"
-                              IsEnabled="{Binding IsWorkGridVisible}"/>
-                </MenuItem>
-            </Menu>
-            <CheckBox Width="28"
-                      Template="{StaticResource generalCheckTemplate}" 
-                      IsChecked="{Binding IsFullScreen}" >
-                <CheckBox.Style>
-                    <Style TargetType="{x:Type CheckBox}">
-                        <Setter Property="ToolTip" Value="全屏"/>
-                        <Setter Property="Content" Value="M0,6 0,12 L6,12 
-                                M6,0 12,0 L12,6"/>
-                        <Style.Triggers>
-                            <Trigger Property="IsChecked" Value="True">
-                                <Setter Property="ToolTip" Value="还原"/>
-                                <Setter Property="Content" Value="M0,8 6,8 L6,14 
-                                        M8,0 8,6 L14,6"/>
-                            </Trigger>
-                        </Style.Triggers>
-                    </Style>
-                </CheckBox.Style>
-            </CheckBox>
-        </StackPanel>
         <!--没有加载文件时的提示文本-->
         <Grid Grid.Row="1" Background="Transparent" AllowDrop="True" Drop="BgGrid_Drop">
             <TextBlock Text="欢迎使用多分支文本编辑器&#x000A;打开导航文件 Ctrl+O 或者拖入&#x000A;新建导航文件 Ctrl+Shift+N"
@@ -255,6 +169,148 @@
                 </Style>
             </Grid.Style>
         </Grid>
+        <v:ToolBarBorder IsFullScreen="{Binding IsFullScreen}">
+            <v:ToolBarBorder.Style>
+                <Style TargetType="{x:Type v:ToolBarBorder}">
+                    <Setter Property="Background" Value="{DynamicResource BaseBrush}"/>
+                    <Setter Property="BorderThickness" Value="2,0,2,2"/>
+                    <Setter Property="BorderBrush" Value="{DynamicResource ThemeBrush}"/>
+                    <Setter Property="VerticalAlignment" Value="Top"/>
+                    <Setter Property="HorizontalAlignment" Value="Center"/>
+                    <Setter Property="Grid.RowSpan" Value="2"/>
+                    <Style.Triggers>
+                        <Trigger Property="IsFullScreen" Value="False">
+                            <Setter Property="Grid.RowSpan" Value="1"/>
+                            <Setter Property="VerticalAlignment" Value="Stretch"/>
+                            <Setter Property="HorizontalAlignment" Value="Left"/>
+                            <Setter Property="BorderThickness" Value="0"/>
+                            <Setter Property="Height" Value="28"/>
+                        </Trigger>
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="IsFullScreen" Value="True"/>
+                                <Condition Property="IsMouseOver" Value="True"/>
+                            </MultiTrigger.Conditions>
+                            <Setter Property="Height" Value="30"/>
+                            <Setter Property="Effect">
+                                <Setter.Value>
+                                    <DropShadowEffect Direction="0" ShadowDepth="0" 
+                                                      Color="{DynamicResource Theme}" Opacity="0.5"/>
+                                </Setter.Value>
+                            </Setter>
+                        </MultiTrigger>
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="IsFullScreen" Value="True"/>
+                                <Condition Property="IsMouseOver" Value="False"/>
+                            </MultiTrigger.Conditions>
+                            <MultiTrigger.EnterActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <DoubleAnimation Duration="0:0:0.2" From="30" To="4"
+                                                         Storyboard.TargetProperty="(Border.Height)"/>
+                                        <DoubleAnimation Duration="0:0:0.2" From="1" To="0.5"
+                                                         Storyboard.TargetProperty="Opacity"/>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </MultiTrigger.EnterActions>
+                            <MultiTrigger.ExitActions>
+                                <BeginStoryboard>
+                                    <Storyboard FillBehavior="Stop">
+                                        <DoubleAnimation Duration="0:0:0.2" From="4" To="30"
+                                                         Storyboard.TargetProperty="(Border.Height)"/>
+                                        <DoubleAnimation Duration="0:0:0.2" From="0.5" To="1"
+                                                         Storyboard.TargetProperty="Opacity"/>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </MultiTrigger.ExitActions>
+                        </MultiTrigger>
+                    </Style.Triggers>
+                </Style>
+            </v:ToolBarBorder.Style>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Left"
+                        Grid.Row="0" Height="28">
+                <Button ToolTip="新建" Width="28"
+                        Template="{StaticResource generalButtonTemplate}"
+                        Command="{Binding NewFileCommand}"
+                        Content="M0,9 L6,9 M3,6 3,12
+                        M2,5 2,0 9,0 12,3 12,14 2,14 L2,13
+                        M9,0 9,3 L12,3"/>
+                <Button ToolTip="打开" Width="28"
+                        Template="{StaticResource generalButtonTemplate}"
+                        Command="{Binding OpenFileCommand}"
+                        Content="M1,12 13,12 16,6 4,6 Z
+                        M1,12 0,12 0,4 2,2 6,2 8,4 13,4 L13,6"/>
+                <Button ToolTip="保存" Width="28"
+                        Template="{StaticResource generalButtonTemplate}"
+                        Command="{Binding SaveFileCommand}"
+                        Content="M0,14 0,0 3,0 3,5 8,5 8,0 9,0 12,3 12,14 Z
+                        M4,0 6,0 L6,4"/>
+                <Button ToolTip="另存为" Width="28"
+                        Template="{StaticResource generalButtonTemplate}"
+                        Command="{Binding SaveAsFileCommand}"
+                        Content="M0,5 0,0 3,0 3,5 8,5 8,0 9,0 12,3 12,14 L8,14 
+                        M4,14 0,14 L0,13
+                        M4,0 6,0 L6,4 M0,10 L8,10 M5,7 8,10 L5,13"/>
+                <Separator Width="1" Margin="4" Background="{DynamicResource ThemeBrush}" Opacity="0.5"
+                           Style="{DynamicResource {x:Static ToolBar.SeparatorStyleKey}}" />
+                <Button ToolTip="字体缩小" Width="28"
+                        Command="{Binding FontSizeDownCommand}"
+                        Template="{StaticResource generalButtonTemplate}"
+                        Content="M0,16 5,4 L10,16 M2,11 L8,11
+                        M12,16 14,11.2 16,16
+                        M10,4 16,4"/>
+                <TextBlock Text="{Binding TextFontSize}" Width="14" VerticalAlignment="Center"
+                           TextAlignment="Center" Foreground="{DynamicResource Foreground.BaseBrush}"/>
+                <Button ToolTip="字体放大" Width="28"
+                        Command="{Binding FontSizeUpCommand}"
+                        Template="{StaticResource generalButtonTemplate}"
+                        Content="M6,16 11,4 L16,16 M8,11 L14,11
+                        M0,16 2,11.2 4,16
+                        M0,4 6,4 M3,1 3,7"/>
+                <Separator Width="1" Margin="4" Background="{DynamicResource ThemeBrush}" Opacity="0.5"
+                           Style="{DynamicResource {x:Static ToolBar.SeparatorStyleKey}}" />
+                <Border Margin="6,1,6,1" BorderThickness="1,0,0,1" 
+                        MinWidth="400" BorderBrush="{DynamicResource ThemeBrush}">
+                    <v:HintTextBlock Width="Auto" Margin="8,0,0,0"
+                                     IsAwake="{Binding IsHintAwake}"
+                                     InText="{Binding InText}"
+                                     OutText="{Binding OutText}"/>
+                </Border>
+                <Separator Width="1" Margin="4" Background="{DynamicResource ThemeBrush}" Opacity="0.5"
+                           Style="{DynamicResource {x:Static ToolBar.SeparatorStyleKey}}" />
+                <Menu Background="Transparent" Height="28">
+                    <MenuItem Header="M0,0 6,6 L0,12 M8,0 14,6 L8,12" ToolTip="导出">
+                        <MenuItem Header="导出为json" Command="{Binding OutputAsJSONCommand}"
+                                  IsEnabled="{Binding IsWorkGridVisible}"/>
+                        <MenuItem Header="导出为txt" Command="{Binding OutputAsTxtCommand}"
+                                  IsEnabled="{Binding IsWorkGridVisible}"/>
+                        <MenuItem Header="导出为docx"
+                                  IsEnabled="{Binding IsWorkGridVisible}"/>
+                        <MenuItem Header="导出为latex"
+                                  IsEnabled="{Binding IsWorkGridVisible}"/>
+                        <MenuItem Header="导出节点图.png" Command="{Binding OutputFCCCommand}"
+                                  IsEnabled="{Binding IsWorkGridVisible}"/>
+                    </MenuItem>
+                </Menu>
+                <CheckBox Width="28" Template="{StaticResource generalCheckTemplate}" 
+                          IsChecked="{Binding IsFullScreen}" >
+                    <CheckBox.Style>
+                        <Style TargetType="{x:Type CheckBox}">
+                            <Setter Property="ToolTip" Value="全屏"/>
+                            <Setter Property="Content" Value="M0,6 0,12 L6,12 
+                                    M6,0 12,0 L12,6"/>
+                            <Style.Triggers>
+                                <Trigger Property="IsChecked" Value="True">
+                                    <Setter Property="ToolTip" Value="还原"/>
+                                    <Setter Property="Content" Value="M0,8 6,8 L6,14 
+                                            M8,0 8,6 L14,6"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </CheckBox.Style>
+                </CheckBox>
+            </StackPanel>
+        </v:ToolBarBorder>
     </Grid>
-
 </v:MetroWindow>
