--- a/Resources/WindowResources.xaml
+++ b/Resources/WindowResources.xaml
@@ -251,6 +251,9 @@
                             HorizontalAlignment="Left"/>
                 </StackPanel>
                 <StackPanel Orientation="Vertical" Grid.Column="1" Margin="6">
+                    <CheckBox Content="连续Ctrl+S保存整个文档"
+                              IsChecked="{Binding DoubleSaveAwake}"
+                              Template="{StaticResource settingCheckBox}"/>
                     <StackPanel Orientation="Vertical" Margin="2"
                                 Background="{DynamicResource BaseBrush}">
                         <TextBlock Text="文本编辑页边距" Margin="4,4,0,0" 
