--- a/Resources/Dictionary.xaml
+++ b/Resources/Dictionary.xaml
@@ -19,6 +19,7 @@
     <!--转换器-->
     <cvt:NumberToPercentStrConverter x:Key="numToPerCvt" />
     <cvt:ListToBoolConverter x:Key="listToBoolCvt"/>
+    <cvt:WindowStateToBool x:Key="stateToBoolCvt"/>
 
     <!--菜单-->
     <!--右键菜单style-->
