--- a/View/Window/OutputAsTxtWindow.xaml
+++ b/View/Window/OutputAsTxtWindow.xaml
@@ -4,6 +4,7 @@
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
                     xmlns:v="clr-namespace:MultiBranchTexter.View"
+                    xmlns:vm="clr-namespace:MultiBranchTexter.ViewModel"
                     Style="{StaticResource OutputWindowStyle}"
                     Height="400" Width="600"
                     WindowStartupLocation="CenterOwner"
@@ -11,7 +12,43 @@
                     SavePath="yes"
                     mc:Ignorable="d" 
                     d:DesignHeight="400" d:DesignWidth="600">
+    <v:OutputWindowBase.DataContext>
+        <vm:OutputViewModel/>
+    </v:OutputWindowBase.DataContext>
+    
     <Grid Background="{DynamicResource MainBrush}">
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <StackPanel>
+            <CheckBox Content="导出注释" IsChecked="{Binding OutputComment}"
+                      Template="{StaticResource settingCheckBox}"/>
+            <TextBox Text="{Binding CommentParPre}" TextWrapping="Wrap"/>
+            <TextBlock Text="片段注释前"/>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="2*"/>
+                </Grid.ColumnDefinitions>
+                <TextBox Text="{Binding CommentLinePre}" Grid.Column="0"/>
+                <TextBlock Text="片段注释每行前" TextAlignment="Center" Grid.Column="1"/>
+                <TextBlock Text="片段注释每行后" TextAlignment="Center" Grid.Column="3"/>
+                <TextBox Text="{Binding CommentLinePost}" Grid.Column="4"/>
+            </Grid>
+            <TextBlock Text="片段注释后"/>
+            <TextBox Text="{Binding CommentParPost}" TextWrapping="Wrap"/>
+        </StackPanel>
+        <StackPanel Grid.Row="1">
+            <CheckBox Content="片段注释导出在文本前面" IsChecked="{Binding IsCommentBefore}"
+                      Template="{StaticResource settingCheckBox}"/>
+            <TextBox Text="{Binding ContentParPre}" TextWrapping="Wrap"/>
+            <TextBlock Text="片段文本前"/>
+            <TextBlock Text="片段文本后"/>
+            <TextBox Text="{Binding ContentParPost}" TextWrapping="Wrap"/>
+        </StackPanel>
     </Grid>
 </v:OutputWindowBase>
